workloads/apps/hedgedoc/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc-db
  template:
    metadata:
      labels:
        app: hedgedoc-db
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          volumeMounts:
            - name: hedgedoc-db-data
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - hedgedoc
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: hedgedoc-db-data
          persistentVolumeClaim:
            claimName: hedgedoc-db-pvc
