workloads/apps/hedgedoc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: quay.io/hedgedoc/hedgedoc:1.10.0
          volumeMounts:
            - name: hedgedoc-uploads
              mountPath: /hedgedoc/public/uploads
      volumes:
        - name: hedgedoc-uploads
          persistentVolumeClaim:
            claimName: hedgedoc-uploads-pvc
