workloads/apps/hedgedoc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hedgedoc
---
apiVersion: v1
kind: Service
metadata:
  name: hedgedoc-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: hedgedoc-db
